<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/iedbg"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.logischtech.iedplan.Register">

    <RelativeLayout
        android:layout_width="330dp"
        android:background="@drawable/contentlr_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="360dp"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:layout_width="260dp"
            android:src="@drawable/iedlogo"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:layout_marginLeft="25dp"
            android:id="@+id/imageView3" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"
            android:hint="@string/icon_name1"
            android:textStyle="normal"
            android:id="@+id/etname"
            android:textSize="16dp"
            android:textColorHint="#0B74BB"

            android:textColor="#3689C5"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="125dp"
            android:hint="@string/icon_email"
            android:textSize="16dp"

            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"

            android:textStyle="normal"
            android:textColorHint="#0B74BB"
            android:textColor="#3689C5"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:id="@+id/etemailreg"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="170dp"
            android:hint="@string/icon_password"
            android:textSize="16dp"

            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"

            android:textStyle="normal"
            android:textColorHint="#0B74BB"
            android:textColor="#3689C5"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:id="@+id/etpasswordreg"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="215dp"
            android:hint="@string/icon_org"
            android:textSize="16dp"

            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"

            android:textStyle="normal"
            android:textColorHint="#0B74BB"
            android:textColor="#3689C5"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:id="@+id/etorg"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="fill_parent"
            android:id="@+id/org_spinner"
            android:textColor="#3689C5"
            android:theme="@style/Spinner"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30dp"

            android:prompt="@string/prompt"
            android:paddingLeft="20dp"
            android:paddingTop="-10dp"
            android:layout_marginTop="270dp"
            android:layout_height="wrap_content"></Spinner>



    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/submit"
        android:layout_marginTop="340dp"
        android:id="@+id/btnregister"

        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="You have already created account"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="normal"
        android:textColor="#000"
        android:layout_marginTop="420dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="Sign in "
        android:textColor="#FFAE3B"
        android:textStyle="bold"
        android:id="@+id/signin"
        android:layout_marginTop="455dp"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="325dp"
        android:background="#f1f1f1"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="45dp">

    </View>


    <ImageView
        android:layout_width="300dp"
        android:background="@drawable/spnsr"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="490dp"
        android:layout_height="40dp" />

</RelativeLayout>
